# zombies-solana-anchorzombies-solana-steel

./: .gitignore  Cargo.toml  README.md  package-lock.json  package.json
api/: Cargo.toml
api/src/: constants.rs  errors.rs  instructions.rs  lib.rs
api/src/state/: army.rs  battle.rs  mod.rs
app/: helpers.mjs  package-lock.json  package.json  term_client.mjs
program/: Cargo.toml
program/src/: battle.rs  init.rs  lib.rs  remove_zombie.rs
tests/: helpers.mjs  zombies.mjs
