[package]
name = "program"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "lib"]
name = "zombies"

[dependencies]
solana-program.workspace = true
spl-associated-token-account.workspace = true
spl-token.workspace = true
steel.workspace = true
bytemuck.workspace = true
num_enum.workspace = true
api.workspace = true